--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 <script src="https://utteranc.es/client.js"
-        repo="pavanjoshi914/Front-End-Development"
+        repo="pavanjoshi914/Blog"
         issue-term="pathname"
         theme="github-light"
         crossorigin="anonymous"
