--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <body>
 <h1> Comments Test</h1>
 <script src="https://utteranc.es/client.js"
-        repo="pavanjoshi914/vlog_comments"
-        issue-term="pathname"
+        repo="varunherlekar/blog-comments"
+        issue-term="Comment"
         theme="github-light"
         crossorigin="anonymous"
         async>
