--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <body>
 <h1> Comments Test</h1>
 <script src="https://utteranc.es/client.js"
-        repo="varunherlekar/blog-comments"
-        issue-term="Comment"
+        repo="https://github.com/varunherlekar/blog-comments"
+        issue-term="pathname"
+        label="Comment"
         theme="github-light"
         crossorigin="anonymous"
         async>
