--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <body>
 <h1> Comments Test</h1>
 <script src="https://utteranc.es/client.js"
-        repo="https://github.com/varunherlekar/blog-comments"
-        issue-term="pathname"
-        label="Comment"
-        theme="github-light"
-        crossorigin="anonymous"
-        async>
+    repo="rmsrosa/blog_comments"
+    issue-term="pathname"
+    theme="github-light"
+    crossorigin="anonymous"
+    async>
+</script>
 </script>
 </body>
 </html>
