--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <body>
 <h1> Comments Test</h1>
 <script src="https://utteranc.es/client.js"
-    repo="varunherlekar/blog-comments"
+    repo="pavanjoshi914/Blog"
     issue-term="pathname"
     theme="github-light"
     crossorigin="anonymous"
